CSS FIX: Ensure mode is visible on screen

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -75,6 +75,7 @@
 .title {
   font-size: 48px;
   font-weight: 800;
+  margin: 8px 0;
 }
 
 .resetButton {
